Added the other functions for tag saving
